--- a/client/src/common/render/render.scss
+++ b/client/src/common/render/render.scss
@@ -4,12 +4,14 @@
  */
 .editor-placeholder {
     width: 100%;
+    min-height: 160px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     opacity: 0.6;
     pointer-events: none;
     font-size: 30px;
-    height: 160px;
     color: #999;
-    line-height: 160px;
-    text-align: center;
     background: #eee;
 }
