--- a/client/src/components/layerCake/layerCake.scss
+++ b/client/src/components/layerCake/layerCake.scss
@@ -10,8 +10,8 @@
     height: 100%;
     background: #24272E 100%;
     color: #DEDEE0;
-    //transform: translateX(-160px);
-    transform: translateX(0);
+    transform: translateX(-160px);
+    //transform: translateX(0);
 
     &-active {
         transform: translateX(0);
