添加新手引导

--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -139,3 +139,13 @@ body {
         margin-left: 18px;
     }
 }
+
+.ec-editor-guide {
+    // .ec-editor-layer-cake {
+    //     transform: translateX(0px);
+    // }
+
+    // .ec-panel-layout {
+    //     right: 0;
+    // }
+}
