--- a/client/src/components/control/control.scss
+++ b/client/src/components/control/control.scss
@@ -1,4 +1,7 @@
+@import "../../css/common";
+
 .ec-edit-control {
+    @include bezierAnimate(out-quint, 0.4s);
     position: absolute;
     visibility: hidden;
     z-index: 887;
