--- a/client/src/components/menu/app.scss
+++ b/client/src/components/menu/app.scss
@@ -87,3 +87,10 @@ $padding: 20px;
     background-color: #2D3035;
 }
 
+.ec-editor-logo {
+    display: inline-block;
+    width: 140px;
+    height: 70px;
+    background: url("../../images/wuget-logo-white.png") no-repeat 0 0;
+    background-size: 100%;
+}
