--- a/client/src/components/guide/index.scss
+++ b/client/src/components/guide/index.scss
@@ -4,13 +4,17 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 999;
+    z-index: 100000;
     &-rect {
         position: absolute;
         border: 1px solid #fff;
         width: 20px;
         height: 20px;
-        z-index: 1000
+        z-index: 100001
     }
+}
+
+.ant-popover {
+    z-index: 999999;
 }
 
