--- a/client/src/pages/editor/app.scss
+++ b/client/src/pages/editor/app.scss
@@ -70,10 +70,10 @@ body {
     margin-bottom: 6px;
 }
 
-.ant-row {
-    margin-bottom: 16px;
-    margin-top: 16px;
-}
+//.ant-row {
+//    margin-bottom: 16px;
+//    margin-top: 16px;
+//}
 
 .ec-editor-layout-fixed {
     opacity: 1;
