--- a/client/src/propEdit/propsEdit.scss
+++ b/client/src/propEdit/propsEdit.scss
@@ -1,6 +1,7 @@
-input[type="text"] {
-    border: none;
-}
+// TODO: 不能这种全局的样式覆盖
+// input[type="text"] {
+//     border: none;
+// }
 
 .inline-block {
     display: inline-block;
