--- a/client/style/reset.css
+++ b/client/style/reset.css
@@ -60,6 +60,7 @@ input[type="text"] {
     float: right;
 }
 
-.ant-popover-inner-content {
+// TODO: 不能改框架的默认样式啊
+/* .ant-popover-inner-content {
     padding: 0;
-}
+} */
