--- a/client/src/components/pubComps/pubComps.scss
+++ b/client/src/components/pubComps/pubComps.scss
@@ -1,3 +1,5 @@
+@import "../../css/common";
+
 .ec-editor-pub-comps {
     position: static;
     margin-bottom: 0;
@@ -11,6 +13,7 @@
         padding: 15px 0;
         background: #161616;
         margin: 0;
+        text-align: center;
 
         .ec-editor-logo {
             display: inline-block;
@@ -18,6 +21,10 @@
             height: 18px;
             background: url("../../images/wuget-logo-white.png") no-repeat 0 0;
             background-size: 100%;
+
+            &-leave {
+                @include bezierAnimate('out-quint', 0.4s);
+            }
         }
     }
 
