--- a/client/src/components/particle/app.scss
+++ b/client/src/components/particle/app.scss
@@ -5,7 +5,7 @@
         position: relative;
     }
 
-    &-canvas,
+    //&-canvas,
     &-img {
         transition: all 0.4s cubic-bezier(.23, 1, .32, 1);
     }
