--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -105,7 +105,7 @@ body {
     }
 
     &-img {
-        height: 204px;
+        width: 287px;
     }
 
     &-button {
@@ -161,6 +161,8 @@ body {
 
     &-imgWrap {
         position: relative;
+        height: 196px;
+        overflow: hidden;
     }
 
     &-pendant {
