--- a/client/src/components/panel/panel.scss
+++ b/client/src/components/panel/panel.scss
@@ -218,3 +218,16 @@ $layoutWidth: 300px;
     height: 100%;
 }
 
+.ec-edit-setting {
+    &-thumbnail {
+        margin: 6px 0 0 0;
+        display: inline-block;
+        vertical-align: middle;
+    }
+    &-title {
+        margin: 10px 0 0 0;
+        input {
+            margin-left: 4px;
+        }
+    }
+}
