--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -17,7 +17,7 @@ body {
 .page-list-pagin, .page-list-wrap {
     overflow: hidden;
     padding-top: 20px;
-    margin: 50px auto;
+    margin: 0px auto 50px;
     width: 1200px;
     text-align: center;
 }
@@ -25,6 +25,21 @@ body {
 .page-list-empty {
     color: #999;
     margin: 30px auto;
+}
+
+.page-list-handleRegion {
+    margin: 20px auto 0;
+    width: 1200px;
+    text-align: center;
+    overflow: hidden;
+
+    &-left {
+        float: left;
+    }
+
+    &-right {
+        float: right;
+    }
 }
 
 @keyframes pulse {
