--- a/client/src/pages/lists/app.scss
+++ b/client/src/pages/lists/app.scss
@@ -28,6 +28,7 @@ body {
 }
 
 .page-list-handleRegion {
+    padding: 0 24px 0 14px;
     margin: 20px auto 0;
     width: 1200px;
     text-align: center;
