--- a/client/src/components/editable/editable.scss
+++ b/client/src/components/editable/editable.scss
@@ -3,9 +3,24 @@
     z-index: 99;
     border: 1px dashed #000;
     pointer-events: none;
+    overflow: hidden;
+
+    &-name {
+        position: relative;
+        left: 0;
+        top: 0;
+        padding: 5px 10px;
+        height: 30px;
+        line-height: 20px;
+        font-size: 14px;
+        color: #fff;
+        display: inline-block;
+        background: rgba(0, 0, 0, 0.6);
+        border-radius: 0 0 6px 0;
+    }
 
     &-hide {
-        display: none;
+        opacity: 0;
     }
 }
 
