--- a/client/src/components/dragger/dragger.scss
+++ b/client/src/components/dragger/dragger.scss
@@ -4,6 +4,7 @@
     @include bezierAnimate(out-quint, 0.2s);
     position: absolute;
     overflow: hidden;
+    box-shadow: 0px 0px 6px -2px #000;
 
     &-content {
         position: absolute;
