--- a/client/src/components/editable/editable.scss
+++ b/client/src/components/editable/editable.scss
@@ -38,7 +38,7 @@
         top: 1px;
         font-size: 20px;
         background: #bbb;
-        box-shadow: -2px 2px 6px -2px #000;
+        box-shadow: -2px 2px 4px -2px #222;
         border-radius: 0 0 0 6px;
         overflow: hidden;
     }
@@ -49,7 +49,7 @@
         pointer-events: visible;
 
         &:hover {
-            background: #eee;
+            background: #929292;
         }
     }
 }
