--- a/client/src/components/placeholder/app.scss
+++ b/client/src/components/placeholder/app.scss
@@ -27,6 +27,7 @@
         width: 70px;
         height: 70px;
         margin-right: 20px;
+        background-repeat: no-repeat;
 
         &.placeholder-def {
             background-image: url('./images/placeholder_def.svg');
