--- a/client/src/propEdit/propsEdit.scss
+++ b/client/src/propEdit/propsEdit.scss
@@ -87,3 +87,9 @@
 .ant-popover-inner-content {
     padding: 0;
 }
+
+.close-btn-position {
+    position: absolute;
+    top: 6px;
+    right: 3px;
+}
