--- a/client/src/components/dragger/dragger.scss
+++ b/client/src/components/dragger/dragger.scss
@@ -1,7 +1,7 @@
 @import "../../css/common.scss";
 
 .dragger {
-    @include bezierAnimate(out-quint, 0.1s);
+    //@include bezierAnimate(out-quint, 0.1s);
     position: absolute;
     overflow: hidden;
     box-shadow: 0px 0px 6px -2px #000;
