--- a/client/src/components/editable/editable.scss
+++ b/client/src/components/editable/editable.scss
@@ -1,5 +1,5 @@
 .editable-tips {
-    position: absolute;
+    position: fixed;
     z-index: 99;
     border: 1px dashed #000;
     pointer-events: none;
