--- a/client/src/pages/viewer/index.scss
+++ b/client/src/pages/viewer/index.scss
@@ -1,24 +1,17 @@
-html, body, #root {
-    height: 100%;
-}
 
-.ec-editor-scroller, .ec-editor-viewer {
-    height: 100%;
-}
-
-.ec-editor-canvas {
+.ec-editor-view {
     background: #fff;
     height: 100%;
 
     &-inner {
         height: 100%;
     }
-}
 
-.tmc-click-area {
-    cursor: pointer;
+    .tmc-click-area {
+        cursor: pointer;
 
-    &:hover {
-        background: rgba(255, 255, 255, 0.2);
+        &:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
     }
 }
