--- a/client/src/propEdit/propsEdit.scss
+++ b/client/src/propEdit/propsEdit.scss
@@ -12,6 +12,19 @@
         margin-bottom: 10px;
     }
 
+    /**
+     * 单元格设置
+     */
+    &-props {
+        margin-bottom: 4px;
+
+        label {
+            display: block;
+            margin-right: 2px;
+            margin-bottom: 4px;
+        }
+    }
+
     &-basic-props {
         margin-bottom: 4px;
 
