--- a/client/src/propEdit/term/app.scss
+++ b/client/src/propEdit/term/app.scss
@@ -7,5 +7,18 @@
             color: #8E8E94;
             border: 1px solid #2D2D32;
         }
+
+        .ant-calendar-picker-clear {
+            background: none;
+            color: rgba(255, 255, 255, 0.6);
+        }
     }
+}
+
+/**
+ * 编辑模式下，不将组件隐藏
+ */
+.tmc-term-hide {
+    display: block;
+    opacity: 0.2;
 }
