--- a/client/src/propEdit/term/app.scss
+++ b/client/src/propEdit/term/app.scss
@@ -22,3 +22,9 @@
     display: block;
     opacity: 0.2;
 }
+
+.ec-editor-range-type {
+    label, .anticon {
+        vertical-align: middle;
+    }
+}
