--- a/client/src/components/editable/editable.scss
+++ b/client/src/components/editable/editable.scss
@@ -28,8 +28,8 @@
 .editable-active-panel {
     width: 100%;
     height: 100%;
-    border: 1px solid #ccc;
-    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid #000;
+    // background: rgba(255, 255, 255, 0.2);
 
     &-bar {
         position: absolute;
