--- a/client/components/mobile/click-area/clickArea.scss
+++ b/client/components/mobile/click-area/clickArea.scss
@@ -45,7 +45,7 @@
 }
 .ec-modal-title {
     margin: 0;
-    font-size: 24px;
+    font-size: 24px !important;
     line-height: 36px;
     font-weight: 500;
     color: rgba(0, 0, 0, 0.85);
