--- a/client/src/components/dragger/dragger.scss
+++ b/client/src/components/dragger/dragger.scss
@@ -5,6 +5,7 @@
     position: absolute;
     overflow: hidden;
     box-shadow: 0px 0px 6px -2px #000;
+    z-index: 2000;
 
     &-content {
         position: absolute;
